--- a/examples/Advance-RAG-with-HyDE/main.ipynb
+++ b/examples/Advance-RAG-with-HyDE/main.ipynb
@@ -164,7 +164,9 @@
     "embeddings = HypotheticalDocumentEmbedder.from_llm(llm, emebeddings, \"web_search\")\n",
     "\n",
     "# Now we can use it as any embedding class\n",
-    "result = embeddings.embed_query(\"which factors appear to be the major nutritional limitations of fast-food meals.\")"
+    "result = embeddings.embed_query(\n",
+    "    \"which factors appear to be the major nutritional limitations of fast-food meals.\"\n",
+    ")"
    ]
   },
   {
@@ -1230,9 +1232,7 @@
    },
    "outputs": [],
    "source": [
-    "embeddings = HypotheticalDocumentEmbedder.from_llm(\n",
-    "    multi_llm, embeddings, \"web_search\"\n",
-    ")"
+    "embeddings = HypotheticalDocumentEmbedder.from_llm(multi_llm, embeddings, \"web_search\")"
    ]
   },
   {
@@ -1288,8 +1288,7 @@
    "outputs": [],
    "source": [
     "embeddings = HypotheticalDocumentEmbedder(\n",
-    "    llm_chain=llm_chain,\n",
-    "    base_embeddings=embeddings\n",
+    "    llm_chain=llm_chain, base_embeddings=embeddings\n",
     ")"
    ]
   },
@@ -1319,8 +1318,8 @@
    },
    "outputs": [],
    "source": [
-    "#Load the  pdf\n",
-    "pdf_folder_path = '/content/kehe103.pdf'\n",
+    "# Load the  pdf\n",
+    "pdf_folder_path = \"/content/kehe103.pdf\"\n",
     "\n",
     "loader = PyPDFLoader(pdf_folder_path)\n",
     "docs = loader.load_and_split()\n",
@@ -1329,7 +1328,7 @@
     "    chunk_size=500,\n",
     "    chunk_overlap=50,\n",
     ")\n",
-    "documents = text_splitter.split_documents(docs)\n"
+    "documents = text_splitter.split_documents(docs)"
    ]
   },
   {
@@ -1351,11 +1350,19 @@
     "import lancedb\n",
     "\n",
     "# lancedb as vectorstore\n",
-    "db = lancedb.connect('/tmp/lancedb')\n",
-    "table = db.create_table(\"documentsai\", data=[\n",
-    "    {\"vector\": embeddings.embed_query(\"Hello World\"), \"text\": \"Hello World\", \"id\": \"1\"}\n",
-    "], mode=\"overwrite\")\n",
-    "vector_store = LanceDB.from_documents(documents, embeddings, connection=table)\n"
+    "db = lancedb.connect(\"/tmp/lancedb\")\n",
+    "table = db.create_table(\n",
+    "    \"documentsai\",\n",
+    "    data=[\n",
+    "        {\n",
+    "            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
+    "            \"text\": \"Hello World\",\n",
+    "            \"id\": \"1\",\n",
+    "        }\n",
+    "    ],\n",
+    "    mode=\"overwrite\",\n",
+    ")\n",
+    "vector_store = LanceDB.from_documents(documents, embeddings, connection=table)"
    ]
   },
   {
@@ -1389,7 +1396,9 @@
    ],
    "source": [
     "# passing in the string query to get some refrence\n",
-    "query = \"which factors appear to be the major nutritional limitations of fast-food meals\"\n",
+    "query = (\n",
+    "    \"which factors appear to be the major nutritional limitations of fast-food meals\"\n",
+    ")\n",
     "\n",
     "vector_store.similarity_search(query)"
    ]
@@ -1421,7 +1430,9 @@
     }
    ],
    "source": [
-    "llm_chain.run(\"which factors appear to be the major nutritional limitations of fast-food meals\")\n"
+    "llm_chain.run(\n",
+    "    \"which factors appear to be the major nutritional limitations of fast-food meals\"\n",
+    ")"
    ]
   },
   {
@@ -1451,7 +1462,7 @@
     }
    ],
    "source": [
-    "llm_chain.run(\"what kind of  Main Nutrients provided by Pulses and Legumes?\")\n"
+    "llm_chain.run(\"what kind of  Main Nutrients provided by Pulses and Legumes?\")"
    ]
   },
   {
@@ -1481,7 +1492,7 @@
     }
    ],
    "source": [
-    "llm_chain.run(\"serving come from which groups & how much\")\n"
+    "llm_chain.run(\"serving come from which groups & how much\")"
    ]
   },
   {
