--- a/examples/Advanced-RAG-with-FLARE/main.ipynb
+++ b/examples/Advanced-RAG-with-FLARE/main.ipynb
@@ -511,12 +511,10 @@
    "outputs": [],
    "source": [
     "model_name = \"BAAI/bge-large-en\"\n",
-    "model_kwargs = {'device': 'cuda'}\n",
-    "encode_kwargs = {'normalize_embeddings': False}\n",
+    "model_kwargs = {\"device\": \"cuda\"}\n",
+    "encode_kwargs = {\"normalize_embeddings\": False}\n",
     "embeddings = HuggingFaceBgeEmbeddings(\n",
-    "    model_name=model_name,\n",
-    "    model_kwargs=model_kwargs,\n",
-    "    encode_kwargs=encode_kwargs\n",
+    "    model_name=model_name, model_kwargs=model_kwargs, encode_kwargs=encode_kwargs\n",
     ")"
    ]
   },
@@ -576,11 +574,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lancedb \n",
-    "db = lancedb.connect('/tmp/lancedb')\n",
-    "table = db.create_table(\"documentsai\", data=[\n",
-    "    {\"vector\": embeddings.embed_query(\"Hello World\"), \"text\": \"Hello World\", \"id\": \"1\"}\n",
-    "], mode=\"overwrite\")\n",
+    "# lancedb\n",
+    "db = lancedb.connect(\"/tmp/lancedb\")\n",
+    "table = db.create_table(\n",
+    "    \"documentsai\",\n",
+    "    data=[\n",
+    "        {\n",
+    "            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
+    "            \"text\": \"Hello World\",\n",
+    "            \"id\": \"1\",\n",
+    "        }\n",
+    "    ],\n",
+    "    mode=\"overwrite\",\n",
+    ")\n",
     "vector_store = LanceDB.from_documents(doc_chunks, embeddings, connection=table)\n",
     "\n",
     "vector_store_retriever = vector_store.as_retriever()"
@@ -600,10 +606,7 @@
    "outputs": [],
    "source": [
     "flare = FlareChain.from_llm(\n",
-    "    llm=llm,\n",
-    "    retriever=vector_store_retriever,\n",
-    "    max_generation_len=300,\n",
-    "    min_prob=0.45\n",
+    "    llm=llm, retriever=vector_store_retriever, max_generation_len=300, min_prob=0.45\n",
     ")"
    ]
   },
@@ -998,23 +1001,25 @@
     "    output = flare.run(input_text)\n",
     "    return output\n",
     "\n",
+    "\n",
     "input = gr.Text(\n",
-    "                label=\"Prompt\",\n",
-    "                show_label=False,\n",
-    "                max_lines=1,\n",
-    "                placeholder=\"Enter your prompt\",\n",
-    "                container=False,\n",
-    "            )\n",
+    "    label=\"Prompt\",\n",
+    "    show_label=False,\n",
+    "    max_lines=1,\n",
+    "    placeholder=\"Enter your prompt\",\n",
+    "    container=False,\n",
+    ")\n",
     "\n",
-    "iface = gr.Interface(fn=generate_flare_output,\n",
-    "             inputs=input,\n",
-    "             outputs=\"text\",\n",
-    "             title=\"My AI bot\",\n",
-    "             description=\"FLARE implementation with lancedb & bge embedding.\",\n",
-    "             )\n",
+    "iface = gr.Interface(\n",
+    "    fn=generate_flare_output,\n",
+    "    inputs=input,\n",
+    "    outputs=\"text\",\n",
+    "    title=\"My AI bot\",\n",
+    "    description=\"FLARE implementation with lancedb & bge embedding.\",\n",
+    ")\n",
     "\n",
     "\n",
-    "iface.launch(debug=True,share=True)"
+    "iface.launch(debug=True, share=True)"
    ]
   },
   {
