--- a/examples/Code-Documentation-QA-Bot/main.ipynb
+++ b/examples/Code-Documentation-QA-Bot/main.ipynb
@@ -55,7 +55,7 @@
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
     "    os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
-    "    \n",
+    "\n",
     "assert len(openai.Model.list()[\"data\"]) > 0"
    ]
   },
@@ -122,10 +122,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pandas_docs = requests.get(\"https://eto-public.s3.us-west-2.amazonaws.com/datasets/pandas_docs/pandas.documentation.zip\")\n",
+    "# pandas_docs = requests.get(\"https://eto-public.s3.us-west-2.amazonaws.com/datasets/pandas_docs/pandas.documentation.zip\")\n",
     "\n",
     "numpy_docs = requests.get(\"https://numpy.org/doc/1.26/numpy-html.zip\")\n",
-    "with open('numpy-html.zip', 'wb') as f:\n",
+    "with open(\"numpy-html.zip\", \"wb\") as f:\n",
     "    f.write(numpy_docs.content)\n",
     "\n",
     "file = zipfile.ZipFile(\"numpy-html.zip\")\n",
@@ -149,25 +149,26 @@
    "source": [
     "# Pre-processing and loading the documentation\n",
     "\n",
-    "#Next, let's pre-process and load the documentation. To make sure we don't need to do this repeatedly if we were updating code,\n",
-    "#we're caching it using pickle so we can retrieve it again (this could take a few minutes to run the first time you do it).\n",
-    "#We'll also add some more metadata to the docs here such as the title and version of the code:\n",
+    "# Next, let's pre-process and load the documentation. To make sure we don't need to do this repeatedly if we were updating code,\n",
+    "# we're caching it using pickle so we can retrieve it again (this could take a few minutes to run the first time you do it).\n",
+    "# We'll also add some more metadata to the docs here such as the title and version of the code:\n",
     "import re\n",
+    "\n",
     "\n",
     "def get_document_title(document_list):\n",
     "    titles = []\n",
     "    for doc in document_list:\n",
-    "        if 'metadata' in doc and 'source' in doc['metadata']:\n",
-    "            m = str(doc['metadata']['source'])\n",
+    "        if \"metadata\" in doc and \"source\" in doc[\"metadata\"]:\n",
+    "            m = str(doc[\"metadata\"][\"source\"])\n",
     "            title = re.findall(\"numpy_docs(.*).html\", m)\n",
     "            print(title)\n",
     "            if title:\n",
     "                titles.append(title[0])\n",
     "            else:\n",
-    "                titles.append('')\n",
+    "                titles.append(\"\")\n",
     "        else:\n",
-    "            titles.append('')\n",
-    "    return titles\n"
+    "            titles.append(\"\")\n",
+    "    return titles"
    ]
   },
   {
@@ -207,17 +208,15 @@
     "        continue\n",
     "    loader = UnstructuredHTMLLoader(p)\n",
     "    raw_document = loader.load()\n",
-    "    #docs.append(raw_document)\n",
+    "    # docs.append(raw_document)\n",
     "    title = get_document_title(raw_document)\n",
-    "    m = {\n",
-    "        \"title\": title\n",
-    "    }\n",
+    "    m = {\"title\": title}\n",
     "    if raw_document:\n",
     "        raw_document[0].metadata.update(m)\n",
     "        raw_document[0].metadata[\"source\"] = str(raw_document[0].metadata[\"source\"])\n",
     "        docs.extend(raw_document)\n",
     "\n",
-    "        \n",
+    "\n",
     "if docs:\n",
     "    with open(docs_path, \"wb\") as fh:\n",
     "        pickle.dump(docs, fh)\n",
@@ -289,10 +288,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = lancedb.connect('lancedb')\n",
-    "table = db.create_table(\"numpy_docs\", data=[\n",
-    "    {\"vector\": embeddings.embed_query(\"Hello World\"), \"text\": \"Hello World\", \"id\": \"1\"}\n",
-    "], mode=\"overwrite\")\n",
+    "db = lancedb.connect(\"lancedb\")\n",
+    "table = db.create_table(\n",
+    "    \"numpy_docs\",\n",
+    "    data=[\n",
+    "        {\n",
+    "            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
+    "            \"text\": \"Hello World\",\n",
+    "            \"id\": \"1\",\n",
+    "        }\n",
+    "    ],\n",
+    "    mode=\"overwrite\",\n",
+    ")\n",
     "docsearch = LanceDB.from_documents(documents, embeddings, connection=table)"
    ]
   },
@@ -311,7 +318,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qa = RetrievalQA.from_chain_type(llm=OpenAI(), chain_type=\"stuff\", retriever=docsearch.as_retriever())"
+    "qa = RetrievalQA.from_chain_type(\n",
+    "    llm=OpenAI(), chain_type=\"stuff\", retriever=docsearch.as_retriever()\n",
+    ")"
    ]
   },
   {
