--- a/examples/RAG_Fusion/main.ipynb
+++ b/examples/RAG_Fusion/main.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['OPENAI_API_KEY'] = 'sk-'"
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-\""
    ]
   },
   {
@@ -103,8 +104,8 @@
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "\n",
-    "#Load the  pdf\n",
-    "pdf_folder_path = '/content/doc.pdf'\n",
+    "# Load the  pdf\n",
+    "pdf_folder_path = \"/content/doc.pdf\"\n",
     "\n",
     "loader = PyPDFLoader(pdf_folder_path)\n",
     "docs = loader.load_and_split()\n",
@@ -148,14 +149,18 @@
     "import lancedb\n",
     "\n",
     "# lancedb as vectorstore\n",
-    "db = lancedb.connect('/tmp/lancedb')\n",
-    "table = db.create_table(\"documents\",\n",
-    "                     data=[{\n",
-    "                            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
-    "                            \"text\": \"Hello World\",\n",
-    "                            \"id\": \"1\"\n",
-    "                            }],\n",
-    "                         mode=\"overwrite\")\n",
+    "db = lancedb.connect(\"/tmp/lancedb\")\n",
+    "table = db.create_table(\n",
+    "    \"documents\",\n",
+    "    data=[\n",
+    "        {\n",
+    "            \"vector\": embeddings.embed_query(\"Hello World\"),\n",
+    "            \"text\": \"Hello World\",\n",
+    "            \"id\": \"1\",\n",
+    "        }\n",
+    "    ],\n",
+    "    mode=\"overwrite\",\n",
+    ")\n",
     "vector_store = LanceDB.from_documents(documents, embeddings, connection=table)"
    ]
   },
@@ -555,13 +560,19 @@
     "    response = openai.chat.completions.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
     "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that generates multiple search queries based on a single input query.\"},\n",
-    "            {\"role\": \"user\", \"content\": f\"Generate multiple search queries related to: {original_query}\"},\n",
-    "            {\"role\": \"user\", \"content\": \"OUTPUT (4 queries):\"}\n",
-    "        ]\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"You are a helpful assistant that generates multiple search queries based on a single input query.\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"role\": \"user\",\n",
+    "                \"content\": f\"Generate multiple search queries related to: {original_query}\",\n",
+    "            },\n",
+    "            {\"role\": \"user\", \"content\": \"OUTPUT (4 queries):\"},\n",
+    "        ],\n",
     "    )\n",
     "    generated_queries = response.choices[0].message.content.strip().split(\"\\n\")\n",
-    "    return generated_queries\n"
+    "    return generated_queries"
    ]
   },
   {
@@ -585,8 +596,10 @@
     "    search_results = {}\n",
     "    retrieved_docs = vector_store.similarity_search(query)\n",
     "    for i in retrieved_docs:\n",
-    "        search_results[i.page_content] = i.metadata['_distance']\n",
-    "    search_results = {doc: score for doc, score in sorted(search_results.items(), key=lambda x: x[1])}\n",
+    "        search_results[i.page_content] = i.metadata[\"_distance\"]\n",
+    "    search_results = {\n",
+    "        doc: score for doc, score in sorted(search_results.items(), key=lambda x: x[1])\n",
+    "    }\n",
     "    return search_results"
    ]
   },
@@ -608,21 +621,30 @@
    },
    "outputs": [],
    "source": [
-    "def reciprocal_rank_fusion(search_results_dict, k=60):   # k=60 taken for optimum results according to paper.\n",
+    "def reciprocal_rank_fusion(\n",
+    "    search_results_dict, k=60\n",
+    "):  # k=60 taken for optimum results according to paper.\n",
     "    fused_scores = {}\n",
     "    print(\"Initial individual search result ranks:\")\n",
     "    for query, doc_scores in search_results_dict.items():\n",
     "        print(f\"For query '{query}': {doc_scores}\")\n",
     "\n",
     "    for query, doc_scores in search_results_dict.items():\n",
-    "        for rank, (doc, score) in enumerate(sorted(doc_scores.items(), key=lambda x: x[1])):\n",
+    "        for rank, (doc, score) in enumerate(\n",
+    "            sorted(doc_scores.items(), key=lambda x: x[1])\n",
+    "        ):\n",
     "            if doc not in fused_scores:\n",
     "                fused_scores[doc] = 0\n",
     "            previous_score = fused_scores[doc]\n",
     "            fused_scores[doc] += 1 / (rank + k)\n",
-    "            print(f\"Updating score for {doc} from {previous_score} to {fused_scores[doc]} based on rank {rank} in query '{query}'\")\n",
+    "            print(\n",
+    "                f\"Updating score for {doc} from {previous_score} to {fused_scores[doc]} based on rank {rank} in query '{query}'\"\n",
+    "            )\n",
     "\n",
-    "    reranked_results = {doc: score for doc, score in sorted(fused_scores.items(), key=lambda x: x[1], reverse=True)}\n",
+    "    reranked_results = {\n",
+    "        doc: score\n",
+    "        for doc, score in sorted(fused_scores.items(), key=lambda x: x[1], reverse=True)\n",
+    "    }\n",
     "    print(\"Final reranked results:\", reranked_results)\n",
     "    return reranked_results"
    ]
@@ -646,14 +668,17 @@
    "source": [
     "def generate_output(original_query, reranked_results):\n",
     "    reranked_docs = [i for i in reranked_results.keys()]\n",
-    "    context = '\\n'.join(reranked_docs)\n",
+    "    context = \"\\n\".join(reranked_docs)\n",
     "    response = openai.chat.completions.create(\n",
     "        model=\"gpt-3.5-turbo\",\n",
     "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant that answers user's questions based on the context provided.\\nDo not make up an answer if you do not know it, stay within the bounds of the context provided, if you don't know the answer, say that you don't have enough information on the topic!\"},\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"You are a helpful assistant that answers user's questions based on the context provided.\\nDo not make up an answer if you do not know it, stay within the bounds of the context provided, if you don't know the answer, say that you don't have enough information on the topic!\",\n",
+    "            },\n",
     "            {\"role\": \"user\", \"content\": f\"CONTEXT: {context}\\nQUERY: {original_query}\"},\n",
-    "            {\"role\": \"user\", \"content\": \"ANSWER:\"}\n",
-    "        ]\n",
+    "            {\"role\": \"user\", \"content\": \"ANSWER:\"},\n",
+    "        ],\n",
     "    )\n",
     "\n",
     "    response = response.choices[0].message.content.strip()\n",
@@ -897,7 +922,7 @@
    },
    "outputs": [],
    "source": [
-    "final_output = generate_output(original_query,reranked_results)"
+    "final_output = generate_output(original_query, reranked_results)"
    ]
   },
   {
