--- a/examples/arxiv-recommender/main.ipynb
+++ b/examples/arxiv-recommender/main.ipynb
@@ -85,9 +85,12 @@
     "import arxiv\n",
     "import lancedb\n",
     "\n",
+    "\n",
     "def embed_func_clip(text):\n",
-    "    model, _, preprocess = open_clip.create_model_and_transforms('ViT-B-32', pretrained='laion2b_s34b_b79k')\n",
-    "    tokenizer = open_clip.get_tokenizer('ViT-B-32')\n",
+    "    model, _, preprocess = open_clip.create_model_and_transforms(\n",
+    "        \"ViT-B-32\", pretrained=\"laion2b_s34b_b79k\"\n",
+    "    )\n",
+    "    tokenizer = open_clip.get_tokenizer(\"ViT-B-32\")\n",
     "    with torch.no_grad():\n",
     "        text_features = model.encode_text(tokenizer(text))\n",
     "    return text_features"
@@ -112,10 +115,10 @@
    "source": [
     "def get_arxiv_df(embed_func, length=100):\n",
     "    results = arxiv.Search(\n",
-    "      query= \"cat:cs.AI OR cat:cs.CV OR cat:stat.ML\",\n",
-    "      max_results = length,\n",
-    "      sort_by = arxiv.SortCriterion.Relevance,\n",
-    "      sort_order = arxiv.SortOrder.Descending\n",
+    "        query=\"cat:cs.AI OR cat:cs.CV OR cat:stat.ML\",\n",
+    "        max_results=length,\n",
+    "        sort_by=arxiv.SortCriterion.Relevance,\n",
+    "        sort_order=arxiv.SortOrder.Descending,\n",
     "    ).results()\n",
     "    df = defaultdict(list)\n",
     "    for result in tqdm(results, total=length):\n",
@@ -128,7 +131,7 @@
     "\n",
     "        except Exception as e:\n",
     "            print(\"error: \", e)\n",
-    "    \n",
+    "\n",
     "    return pd.DataFrame(df)"
    ]
   },
@@ -139,7 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "LENGTH = 100 # Reduce the size for demo\n",
+    "LENGTH = 100  # Reduce the size for demo\n",
+    "\n",
+    "\n",
     "def create_table():\n",
     "    db = lancedb.connect(\"db\")\n",
     "    df = get_arxiv_df(embed_func_clip, LENGTH)\n",
@@ -181,7 +186,7 @@
     "if \"arxiv\" not in db.table_names():\n",
     "    tbl = create_table()\n",
     "else:\n",
-    "    tbl = db.open_table(\"arxiv\")\n"
+    "    tbl = db.open_table(\"arxiv\")"
    ]
   },
   {
@@ -222,13 +227,14 @@
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
+    "\n",
     "def search_table(query, embed_func=embed_func_clip, lim=3):\n",
     "    db = lancedb.connect(\"db\")\n",
     "    tbl = db.open_table(\"arxiv\")\n",
     "\n",
     "    embs = embed_func(query)\n",
-    "    \n",
-    "    return tbl.search(embs.tolist()[0]).limit(3).to_pandas()\n"
+    "\n",
+    "    return tbl.search(embs.tolist()[0]).limit(3).to_pandas()"
    ]
   },
   {
@@ -352,7 +358,7 @@
     "result = search_table(query)\n",
     "\n",
     "result.pop(\"vector\")\n",
-    "display(HTML(result.to_html()))\n"
+    "display(HTML(result.to_html()))"
    ]
   },
   {
@@ -428,7 +434,7 @@
     "result = search_table(query)\n",
     "\n",
     "result.pop(\"vector\")\n",
-    "display(HTML(result.to_html()))\n"
+    "display(HTML(result.to_html()))"
    ]
   },
   {
@@ -502,7 +508,7 @@
    "outputs": [],
    "source": [
     "# This cell might take a few mins\n",
-    "tbl.create_fts_index(\"summary\")\n"
+    "tbl.create_fts_index(\"summary\")"
    ]
   },
   {
@@ -627,7 +633,11 @@
    ],
    "source": [
     "## FTS via title\n",
-    "result = tbl.search(\"What is the general idea behind self-supervised learning.\").limit(10).to_pandas()\n",
+    "result = (\n",
+    "    tbl.search(\"What is the general idea behind self-supervised learning.\")\n",
+    "    .limit(10)\n",
+    "    .to_pandas()\n",
+    ")\n",
     "\n",
     "result.pop(\"vector\")\n",
     "\n",
@@ -728,7 +738,7 @@
     "# get embeddings from df\n",
     "embs = np.array(df.pop(\"vector\").to_list())\n",
     "\n",
-    "project = atlas.map_embeddings(embeddings=embs, data=df.to_dict('records'))\n",
+    "project = atlas.map_embeddings(embeddings=embs, data=df.to_dict(\"records\"))\n",
     "print()"
    ]
   },
