--- a/examples/facial_recognition/main.ipynb
+++ b/examples/facial_recognition/main.ipynb
@@ -138,8 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_DIR = \"./lfw/\" # this is the base path where all our nested images reside\n",
-    "ALL_IMAGES = list(glob.glob(BASE_DIR+\"*/*.jpg\"))"
+    "BASE_DIR = \"./lfw/\"  # this is the base path where all our nested images reside\n",
+    "ALL_IMAGES = list(glob.glob(BASE_DIR + \"*/*.jpg\"))"
    ]
   },
   {
@@ -270,14 +270,16 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame({\"img_path\":ALL_IMAGES})\n",
+    "df = pd.DataFrame({\"img_path\": ALL_IMAGES})\n",
     "df[\"person_name\"] = df[\"img_path\"].apply(lambda x: x.split(\"/\")[2].replace(\"_\", \" \"))\n",
     "\n",
     "# Keep Entries who has Person Name atleast twice\n",
-    "df = df.groupby('person_name').filter(lambda x: len(x) > 1).reset_index(drop = True)\n",
+    "df = df.groupby(\"person_name\").filter(lambda x: len(x) > 1).reset_index(drop=True)\n",
     "\n",
-    "train, test = train_test_split(df, test_size = 0.18, random_state = 13, stratify = df[\"person_name\"])\n",
-    "train # train is just a name for the REFERENCE images which we'll use to save in the db"
+    "train, test = train_test_split(\n",
+    "    df, test_size=0.18, random_state=13, stratify=df[\"person_name\"]\n",
+    ")\n",
+    "train  # train is just a name for the REFERENCE images which we'll use to save in the db"
    ]
   },
   {
@@ -335,10 +337,13 @@
     "    res = None\n",
     "    img = cv2.imread(img_path)\n",
     "    with torch.no_grad():\n",
-    "      cropped = mtcnn(img)\n",
-    "      if cropped is not None:\n",
-    "        res = resnet(torch.Tensor(cropped))[0,:].detach().cpu().numpy()\n",
-    "      else: res = np.ones(512) * 9999999 # for No Embeddings, put a very high high or low value so there's no match\n",
+    "        cropped = mtcnn(img)\n",
+    "        if cropped is not None:\n",
+    "            res = resnet(torch.Tensor(cropped))[0, :].detach().cpu().numpy()\n",
+    "        else:\n",
+    "            res = (\n",
+    "                np.ones(512) * 9999999\n",
+    "            )  # for No Embeddings, put a very high high or low value so there's no match\n",
     "    return res\n",
     "\n",
     "\n",
@@ -356,8 +361,10 @@
     "\n",
     "\n",
     "### load model\n",
-    "resnet = InceptionResnetV1(pretrained='vggface2').eval()\n",
-    "mtcnn = MTCNN(image_size=224, keep_all=True, thresholds=[0.4, 0.5, 0.5], min_face_size=60)\n",
+    "resnet = InceptionResnetV1(pretrained=\"vggface2\").eval()\n",
+    "mtcnn = MTCNN(\n",
+    "    image_size=224, keep_all=True, thresholds=[0.4, 0.5, 0.5], min_face_size=60\n",
+    ")\n",
     "mtcnn.detect_box = MethodType(detect_box, mtcnn)"
    ]
   },
@@ -401,13 +408,15 @@
     "    return [encode_one_image(image_path) for image_path in batch]\n",
     "\n",
     "\n",
-    "db = lancedb.connect(\"./db\") # Connect Local DB\n",
+    "db = lancedb.connect(\"./db\")  # Connect Local DB\n",
     "if \"face_embed\" in db.table_names():\n",
-    "  table = db.open_table(\"face_embed\") # Open Table\n",
+    "    table = db.open_table(\"face_embed\")  # Open Table\n",
     "else:\n",
-    "  # Use the train data images to save embed in the DB\n",
-    "  data = with_embeddings(embed_func, train, column = 'img_path',show_progress = True, batch_size = 32)\n",
-    "  table = db.create_table(\"face_embed\", data=data) # create Table"
+    "    # Use the train data images to save embed in the DB\n",
+    "    data = with_embeddings(\n",
+    "        embed_func, train, column=\"img_path\", show_progress=True, batch_size=32\n",
+    "    )\n",
+    "    table = db.create_table(\"face_embed\", data=data)  # create Table"
    ]
   },
   {
@@ -522,14 +531,16 @@
    ],
    "source": [
     "# SEARCH\n",
-    "query_img_path = test[\"img_path\"].sample(1).values[0] # Get 1 Random sample image from the Test\n",
+    "query_img_path = (\n",
+    "    test[\"img_path\"].sample(1).values[0]\n",
+    ")  # Get 1 Random sample image from the Test\n",
     "\n",
     "query_vector = embed_func([query_img_path])[0]\n",
     "\n",
     "search_results = table.search(query_vector).limit(3)\n",
     "\n",
     "\n",
-    "f,ax = plt.subplots(1,2, figsize = (15,7))\n",
+    "f, ax = plt.subplots(1, 2, figsize=(15, 7))\n",
     "\n",
     "ax[0].imshow(plt.imread(query_img_path))\n",
     "\n",
