--- a/examples/llm-pretraining-dataloading/train.ipynb
+++ b/examples/llm-pretraining-dataloading/train.ipynb
@@ -309,7 +309,10 @@
    ],
    "source": [
     "from datasets import load_dataset\n",
-    "dataset = load_dataset(\"roneneldan/TinyStories\", data_files={'train': 'TinyStoriesV2-GPT4-train.txt'})"
+    "\n",
+    "dataset = load_dataset(\n",
+    "    \"roneneldan/TinyStories\", data_files={\"train\": \"TinyStoriesV2-GPT4-train.txt\"}\n",
+    ")"
    ]
   },
   {
@@ -361,14 +364,14 @@
     "all_tokens = []\n",
     "# Only choosing 1K sentences for now. Increase if you want to train it for longer on larger hardware\n",
     "total_rows = 1000\n",
-    "data = dataset['train'].select([x for x in range(total_rows)])\n",
-    "for row in tqdm(data['text'], total=len(data)):\n",
+    "data = dataset[\"train\"].select([x for x in range(total_rows)])\n",
+    "for row in tqdm(data[\"text\"], total=len(data)):\n",
     "    row = row.replace(\"<|endoftext|>\", \" \")\n",
-    "    encoded = tokenizer(row)['input_ids']\n",
+    "    encoded = tokenizer(row)[\"input_ids\"]\n",
     "    all_tokens.extend(encoded)\n",
     "\n",
-    "pa_table = pa.Table.from_arrays([all_tokens], names=['value'])\n",
-    "lance.write_dataset(pa_table, \"tiny_stories_gpt4_encoded.lance\", {'model': 'create'})\n",
+    "pa_table = pa.Table.from_arrays([all_tokens], names=[\"value\"])\n",
+    "lance.write_dataset(pa_table, \"tiny_stories_gpt4_encoded.lance\", {\"model\": \"create\"})\n",
     "\n",
     "print(f\"Total tokens in tokenized dataset: {len(all_tokens):,.0f}\")"
    ]
@@ -415,7 +418,7 @@
    "outputs": [],
    "source": [
     "class Config:\n",
-    "    vocab_size = 50304 # changing it from 50257 to the nearest multiple of 64 which will boost ops\n",
+    "    vocab_size = 50304  # changing it from 50257 to the nearest multiple of 64 which will boost ops\n",
     "    n_epochs = 50\n",
     "    batch_size = 48\n",
     "    lr = 3e-4\n",
@@ -482,7 +485,9 @@
     "        self.attn_drop = nn.Dropout(config.attn_dropout_val)\n",
     "\n",
     "        # Mask for ensuring causality during training\n",
-    "        self.register_buffer('mask', torch.tril(torch.ones(config.context_len, config.context_len)))\n",
+    "        self.register_buffer(\n",
+    "            \"mask\", torch.tril(torch.ones(config.context_len, config.context_len))\n",
+    "        )\n",
     "\n",
     "    def forward(self, x):\n",
     "        # Shape of x: [bs, context_len, embed_dim]\n",
@@ -490,8 +495,12 @@
     "        q, k, v = self.query(x), self.key(x), self.value(x)\n",
     "\n",
     "        # Get the attention weights\n",
-    "        attn_filter = torch.divide(torch.bmm(q, k.transpose(1, 2)), self.config.head_size)\n",
-    "        attn_filter = attn_filter.masked_fill(self.mask[:context_len, :context_len]==0, float('-inf'))\n",
+    "        attn_filter = torch.divide(\n",
+    "            torch.bmm(q, k.transpose(1, 2)), self.config.head_size\n",
+    "        )\n",
+    "        attn_filter = attn_filter.masked_fill(\n",
+    "            self.mask[:context_len, :context_len] == 0, float(\"-inf\")\n",
+    "        )\n",
     "        attn_weights = F.softmax(attn_filter, dim=-1)\n",
     "        attn_weights = self.attn_drop(attn_weights)\n",
     "\n",
@@ -543,7 +552,7 @@
     "        )\n",
     "\n",
     "        # Projection and Dropout that projects mha_output it back to n_embed dim\n",
-    "        self.proj = nn.Linear(config.num_heads*config.head_size, config.n_embed)\n",
+    "        self.proj = nn.Linear(config.num_heads * config.head_size, config.n_embed)\n",
     "        self.mha_drop = nn.Dropout(config.mha_dropout_val)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -597,10 +606,10 @@
     "        super(FeedForwardNet, self).__init__()\n",
     "\n",
     "        self.ffn = nn.Sequential(\n",
-    "            nn.Linear(config.n_embed, config.n_embed*4),\n",
+    "            nn.Linear(config.n_embed, config.n_embed * 4),\n",
     "            nn.GELU(),\n",
-    "            nn.Linear(config.n_embed*4, config.n_embed),\n",
-    "            nn.Dropout()\n",
+    "            nn.Linear(config.n_embed * 4, config.n_embed),\n",
+    "            nn.Dropout(),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
@@ -714,7 +723,9 @@
     "        self.positional_embedding = nn.Embedding(config.context_len, config.n_embed)\n",
     "\n",
     "        # Define the blocks\n",
-    "        self.backbone = nn.Sequential(*[Block(config) for _ in range(config.num_blocks)])\n",
+    "        self.backbone = nn.Sequential(\n",
+    "            *[Block(config) for _ in range(config.num_blocks)]\n",
+    "        )\n",
     "\n",
     "        # Define the LM head\n",
     "        self.lm_head = nn.Linear(config.n_embed, config.vocab_size)\n",
@@ -724,7 +735,9 @@
     "        tok_emb = self.token_embedding(x)\n",
     "\n",
     "        # Get positional embeddings using torch.arange\n",
-    "        pos_emb = self.positional_embedding(torch.arange(x.shape[1], device=self.device))\n",
+    "        pos_emb = self.positional_embedding(\n",
+    "            torch.arange(x.shape[1], device=self.device)\n",
+    "        )\n",
     "\n",
     "        # Add both embeddings\n",
     "        x = tok_emb + pos_emb\n",
@@ -738,8 +751,8 @@
     "\n",
     "    def get_loss(self, predictions, target):\n",
     "        B, C, V = predictions.shape\n",
-    "        predictions = predictions.view(B*C, V)\n",
-    "        target = target.view(B*C)\n",
+    "        predictions = predictions.view(B * C, V)\n",
+    "        target = target.view(B * C)\n",
     "        loss = F.cross_entropy(predictions, target)\n",
     "        return loss\n",
     "\n",
@@ -750,32 +763,35 @@
     "        logits = self(text)\n",
     "        loss = self.get_loss(logits, target)\n",
     "\n",
-    "        self.log('loss', loss.item(), prog_bar=True)\n",
+    "        self.log(\"loss\", loss.item(), prog_bar=True)\n",
     "\n",
-    "        logs = {'loss': loss}\n",
-    "        return {'log': logs, 'loss': loss}\n",
+    "        logs = {\"loss\": loss}\n",
+    "        return {\"log\": logs, \"loss\": loss}\n",
     "\n",
     "    def training_end(self, outputs):\n",
-    "        avg_loss = torch.stack([x['log']['loss'] for x in outputs]).mean()\n",
+    "        avg_loss = torch.stack([x[\"log\"][\"loss\"] for x in outputs]).mean()\n",
     "\n",
-    "        logs = {'loss': avg_loss}\n",
+    "        logs = {\"loss\": avg_loss}\n",
     "\n",
     "        print(f\"val_loss: {avg_loss}\")\n",
-    "        return {'log': logs}\n",
+    "        return {\"log\": logs}\n",
     "\n",
     "    def configure_optimizers(self):\n",
-    "        opt = torch.optim.AdamW(self.parameters(), lr=self.config.lr, weight_decay=self.config.wd)\n",
+    "        opt = torch.optim.AdamW(\n",
+    "            self.parameters(), lr=self.config.lr, weight_decay=self.config.wd\n",
+    "        )\n",
     "        return [opt], []\n",
+    "\n",
     "\n",
     "def generate(model, prompt, max_tokens, temperature=0.7):\n",
     "    \"\"\"\n",
     "    Generates text based on the provided prompt.\n",
-    "    Model determinism can be changed with temperature \n",
+    "    Model determinism can be changed with temperature\n",
     "    (range: [0, 1], higher means more unstable but creative predictions)\n",
     "    \"\"\"\n",
     "    model.eval()\n",
     "    for _ in range(max_tokens):\n",
-    "        prompt = prompt[:, :config.context_len]\n",
+    "        prompt = prompt[:, : config.context_len]\n",
     "        logits = model(prompt)\n",
     "        logits = logits[:, -1, :] / temperature\n",
     "        logit_probs = nn.functional.softmax(logits, dim=-1)\n",
@@ -841,7 +857,7 @@
     "        Little Utility function to get the data from lance\n",
     "        \"\"\"\n",
     "        data = self.ds.take(idxs).to_pylist()\n",
-    "        data = torch.tensor(list(map(lambda x: x['value'], data)))\n",
+    "        data = torch.tensor(list(map(lambda x: x[\"value\"], data)))\n",
     "        return data\n",
     "\n",
     "    def __getitem__(self, idx):\n",
@@ -849,10 +865,12 @@
     "        Generate a list of indices starting from the current idx to idx+context_len+1\n",
     "        Use the from_idxs function to get data in said indexes and then divide it into features (x) and target (y)\n",
     "        \"\"\"\n",
-    "        current_window_idxs = np.arange(idx, idx+self.context_len+1)\n",
+    "        current_window_idxs = np.arange(idx, idx + self.context_len + 1)\n",
     "        data = self.from_idxs(current_window_idxs)\n",
-    "        x = data[0:self.context_len]\n",
-    "        y = data[1:self.context_len+1] # +1 because our target is the sentence is 1 step ahead of input text\n",
+    "        x = data[0 : self.context_len]\n",
+    "        y = data[\n",
+    "            1 : self.context_len + 1\n",
+    "        ]  # +1 because our target is the sentence is 1 step ahead of input text\n",
     "        return x, y"
    ]
   },
@@ -964,7 +982,7 @@
     "    )\n",
     "\n",
     "    # Init the trainer\n",
-    "    trainer = lightning.Trainer(accelerator='auto', max_epochs=config.n_epochs)\n",
+    "    trainer = lightning.Trainer(accelerator=\"auto\", max_epochs=config.n_epochs)\n",
     "\n",
     "    # Fit on the data\n",
     "    trainer.fit(gpt, loader)"
@@ -1021,11 +1039,11 @@
    ],
    "source": [
     "# Generate some predictions\n",
-    "prompt = \"My cat is\" # Change the prompt to whatever you want\n",
+    "prompt = \"My cat is\"  # Change the prompt to whatever you want\n",
     "\n",
     "tokenizer = GPT2TokenizerFast.from_pretrained(\"gpt2\")\n",
-    "gpt = gpt.to('cuda')\n",
-    "prompt = tokenizer.encode(prompt, return_tensors='pt').to('cuda')\n",
+    "gpt = gpt.to(\"cuda\")\n",
+    "prompt = tokenizer.encode(prompt, return_tensors=\"pt\").to(\"cuda\")\n",
     "generated_text = generate(gpt, prompt, max_tokens=config.context_len, temperature=0.7)\n",
     "generated_text = tokenizer.decode(generated_text.tolist()[0])\n",
     "print(generated_text)"
