--- a/examples/multimodal_video_search/main.ipynb
+++ b/examples/multimodal_video_search/main.ipynb
@@ -106,6 +106,7 @@
     "model = CLIPModel.from_pretrained(MODEL_ID)\n",
     "processor = CLIPProcessor.from_pretrained(MODEL_ID)\n",
     "\n",
+    "\n",
     "def embed_func(query):\n",
     "    inputs = tokenizer([query], padding=True, return_tensors=\"pt\")\n",
     "    text_features = model.get_text_features(**inputs)\n",
@@ -138,7 +139,8 @@
     "    )\n",
     "    return (_extract(tbl.search(emb).limit(9).to_pandas()), code)\n",
     "\n",
-    "#function to find the search for the video keywords from lancedb\n",
+    "\n",
+    "# function to find the search for the video keywords from lancedb\n",
     "def find_video_keywords(query):\n",
     "    code = (\n",
     "        \"import lancedb\\n\"\n",
@@ -148,7 +150,8 @@
     "    )\n",
     "    return (_extract(tbl.search(query).limit(9).to_pandas()), code)\n",
     "\n",
-    "#create a SQL command to retrieve the video from the db\n",
+    "\n",
+    "# create a SQL command to retrieve the video from the db\n",
     "def find_video_sql(query):\n",
     "    code = (\n",
     "        \"import lancedb\\n\"\n",
@@ -161,7 +164,8 @@
     "    videos = tbl.to_lance()\n",
     "    return (_extract(duckdb.sql(query).to_pandas()), code)\n",
     "\n",
-    "#extract the video from the df\n",
+    "\n",
+    "# extract the video from the df\n",
     "def _extract(df):\n",
     "    video_id_col = \"video_id\"\n",
     "    start_time_col = \"start_time\"\n",
@@ -171,7 +175,7 @@
     "        iframe_code = f'<iframe width=\"100%\" height=\"315\" src=\"https://www.youtube.com/embed/{row[video_id_col]}?start={str(row[start_time_col])}\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>'\n",
     "        grid_html += f'<div style=\"width: 100%;\">{iframe_code}</div>'\n",
     "\n",
-    "    grid_html += '</div>'\n",
+    "    grid_html += \"</div>\"\n",
     "    return grid_html"
    ]
   },
@@ -193,6 +197,7 @@
     "    )\n",
     "    return (_extract(tbl.search(emb).limit(9).to_pandas()), code)\n",
     "\n",
+    "\n",
     "def find_video_keywords(query):\n",
     "    code = (\n",
     "        \"import lancedb\\n\"\n",
@@ -202,6 +207,7 @@
     "    )\n",
     "    return (_extract(tbl.search(query).limit(9).to_pandas()), code)\n",
     "\n",
+    "\n",
     "def find_video_sql(query):\n",
     "    code = (\n",
     "        \"import lancedb\\n\"\n",
@@ -210,9 +216,10 @@
     "        \"tbl = db.open_table('multimodal_video')\\n\\n\"\n",
     "        \"videos = tbl.to_lance()\\n\"\n",
     "        f\"duckdb.sql('{query}').to_pandas()\"\n",
-    "    )    \n",
+    "    )\n",
     "    videos = tbl.to_lance()\n",
     "    return (_extract(duckdb.sql(query).to_pandas()), code)\n",
+    "\n",
     "\n",
     "def _extract(df):\n",
     "    video_id_col = \"video_id\"\n",
@@ -223,7 +230,7 @@
     "        iframe_code = f'<iframe width=\"100%\" height=\"315\" src=\"https://www.youtube.com/embed/{row[video_id_col]}?start={str(row[start_time_col])}\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>'\n",
     "        grid_html += f'<div style=\"width: 100%;\">{iframe_code}</div>'\n",
     "\n",
-    "    grid_html += '</div>'\n",
+    "    grid_html += \"</div>\"\n",
     "    return grid_html"
    ]
   },
@@ -246,11 +253,13 @@
     "import gradio as gr\n",
     "\n",
     "with gr.Blocks() as demo:\n",
-    "    gr.Markdown('''\n",
+    "    gr.Markdown(\n",
+    "        \"\"\"\n",
     "            # Multimodal video search using CLIP and LanceDB\n",
     "            We used LanceDB to store frames every thirty seconds and the title of 13000+ videos, 5 random from each top category from the Youtube 8M dataset. \n",
     "            Then, we used the CLIP model to embed frames and titles together. With LanceDB, we can perform embedding, keyword, and SQL search on these videos.\n",
-    "            ''')\n",
+    "            \"\"\"\n",
+    "    )\n",
     "    with gr.Row():\n",
     "        with gr.Tab(\"Embeddings\"):\n",
     "            vector_query = gr.Textbox(value=\"retro gaming\", show_label=False)\n",
@@ -259,17 +268,20 @@
     "            keyword_query = gr.Textbox(value=\"ninja turtles\", show_label=False)\n",
     "            b2 = gr.Button(\"Submit\")\n",
     "        with gr.Tab(\"SQL\"):\n",
-    "            sql_query = gr.Textbox(value=\"SELECT DISTINCT video_id, * from videos WHERE start_time > 0 LIMIT 9\", show_label=False)\n",
+    "            sql_query = gr.Textbox(\n",
+    "                value=\"SELECT DISTINCT video_id, * from videos WHERE start_time > 0 LIMIT 9\",\n",
+    "                show_label=False,\n",
+    "            )\n",
     "            b3 = gr.Button(\"Submit\")\n",
     "    with gr.Row():\n",
     "        code = gr.Code(label=\"Code\", language=\"python\")\n",
     "    with gr.Row():\n",
     "        gallery = gr.HTML()\n",
-    "        \n",
+    "\n",
     "    b1.click(find_video_vectors, inputs=vector_query, outputs=[gallery, code])\n",
     "    b2.click(find_video_keywords, inputs=keyword_query, outputs=[gallery, code])\n",
     "    b3.click(find_video_sql, inputs=sql_query, outputs=[gallery, code])\n",
-    "    \n",
+    "\n",
     "demo.launch()"
    ]
   }
