--- a/examples/parent_document_retriever/main.ipynb
+++ b/examples/parent_document_retriever/main.ipynb
@@ -87,7 +87,7 @@
     "from langchain.vectorstores import LanceDB\n",
     "from langchain.retrievers import ParentDocumentRetriever\n",
     "\n",
-    "#Text Splitting\n",
+    "# Text Splitting\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.storage import InMemoryStore\n",
     "from langchain.docstore.document import Document\n",
@@ -109,7 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"YOUR_API_KEY_HERE\" # NEEDED if you run LLM Experiment below"
+    "os.environ[\"OPENAI_API_KEY\"] = (\n",
+    "    \"YOUR_API_KEY_HERE\"  # NEEDED if you run LLM Experiment below\n",
+    ")"
    ]
   },
   {
@@ -126,9 +128,11 @@
    "outputs": [],
    "source": [
     "# Embedding Functions\n",
-    "model_name = \"BAAI/bge-small-en-v1.5\" # Open Source and effective Embedding\n",
-    "encode_kwargs = {'normalize_embeddings': True} # set True to compute cosine similarity\n",
-    "bge_embeddings = HuggingFaceBgeEmbeddings(model_name=model_name,model_kwargs={'device': 'cuda'},encode_kwargs=encode_kwargs)"
+    "model_name = \"BAAI/bge-small-en-v1.5\"  # Open Source and effective Embedding\n",
+    "encode_kwargs = {\"normalize_embeddings\": True}  # set True to compute cosine similarity\n",
+    "bge_embeddings = HuggingFaceBgeEmbeddings(\n",
+    "    model_name=model_name, model_kwargs={\"device\": \"cuda\"}, encode_kwargs=encode_kwargs\n",
+    ")"
    ]
   },
   {
@@ -145,8 +149,12 @@
    "outputs": [],
    "source": [
     "# Data Chunking Functions\n",
-    "small_chunk_splitter = RecursiveCharacterTextSplitter(chunk_size = 512) # Splitter to split documents into small chunks\n",
-    "big_chunk_splitter = RecursiveCharacterTextSplitter(chunk_size=2048) # Another Level of Bigger Chunks"
+    "small_chunk_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=512\n",
+    ")  # Splitter to split documents into small chunks\n",
+    "big_chunk_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=2048\n",
+    ")  # Another Level of Bigger Chunks"
    ]
   },
   {
@@ -604,10 +612,15 @@
    ],
    "source": [
     "# Load a sample data here\n",
-    "long_texts = load_dataset(\"huggingartists/eminem\")[\"train\"].to_pandas().sample(100)[\"text\"] # Data of huge context length. Use 100 random examples for demo\n",
+    "long_texts = (\n",
+    "    load_dataset(\"huggingartists/eminem\")[\"train\"].to_pandas().sample(100)[\"text\"]\n",
+    ")  # Data of huge context length. Use 100 random examples for demo\n",
     "\n",
     "# Convert to LangChain Document object\n",
-    "docs = [Document(page_content=content, doc_id = _id, metadata = {\"doc_id\":_id}) for (_id, content) in enumerate(long_texts)] # List of LangChain Document Objects\n"
+    "docs = [\n",
+    "    Document(page_content=content, doc_id=_id, metadata={\"doc_id\": _id})\n",
+    "    for (_id, content) in enumerate(long_texts)\n",
+    "]  # List of LangChain Document Objects"
    ]
   },
   {
@@ -641,18 +654,32 @@
    "outputs": [],
    "source": [
     "if \"small_chunk_table\" in my_db.table_names():\n",
-    "  small_chunk_table = my_db.open_table(\"small_chunk_table\")\n",
-    "else: # NOTE: 384 is the size of BAAI Embedding and -999 because it's a dummy data so invalid Embedding\n",
-    "  small_chunk_table = my_db.create_table(\"small_chunk_table\", data=[{\"vector\": [-999]*384, \"text\": \"\", \"doc_id\": \"-1\",}], mode=\"overwrite\")\n",
+    "    small_chunk_table = my_db.open_table(\"small_chunk_table\")\n",
+    "else:  # NOTE: 384 is the size of BAAI Embedding and -999 because it's a dummy data so invalid Embedding\n",
+    "    small_chunk_table = my_db.create_table(\n",
+    "        \"small_chunk_table\",\n",
+    "        data=[\n",
+    "            {\n",
+    "                \"vector\": [-999] * 384,\n",
+    "                \"text\": \"\",\n",
+    "                \"doc_id\": \"-1\",\n",
+    "            }\n",
+    "        ],\n",
+    "        mode=\"overwrite\",\n",
+    "    )\n",
     "\n",
     "small_chunk_table.delete('doc_id = \"-1\"')\n",
     "\n",
-    "vectorstore = LanceDB(small_chunk_table, bge_embeddings) # Vectorstore to use to index the child chunks\n",
-    "store = InMemoryStore() # The storage layer for the parent documents\n",
+    "vectorstore = LanceDB(\n",
+    "    small_chunk_table, bge_embeddings\n",
+    ")  # Vectorstore to use to index the child chunks\n",
+    "store = InMemoryStore()  # The storage layer for the parent documents\n",
     "\n",
-    "full_doc_retriever = ParentDocumentRetriever(vectorstore=vectorstore, docstore=store, child_splitter=small_chunk_splitter)\n",
+    "full_doc_retriever = ParentDocumentRetriever(\n",
+    "    vectorstore=vectorstore, docstore=store, child_splitter=small_chunk_splitter\n",
+    ")\n",
     "\n",
-    "full_doc_retriever.add_documents(docs, ids=None) # Add all the documents"
+    "full_doc_retriever.add_documents(docs, ids=None)  # Add all the documents"
    ]
   },
   {
@@ -688,9 +715,11 @@
    ],
    "source": [
     "# Fetch 3 most similar Smaller Documents\n",
-    "sub_docs = vectorstore.similarity_search(\"I am whatever you say I am and if I wasn't why would you say I am\", k=3)\n",
+    "sub_docs = vectorstore.similarity_search(\n",
+    "    \"I am whatever you say I am and if I wasn't why would you say I am\", k=3\n",
+    ")\n",
     "\n",
-    "print(sub_docs[0].page_content) # This is a Smaller Chunk"
+    "print(sub_docs[0].page_content)  # This is a Smaller Chunk"
    ]
   },
   {
@@ -842,8 +871,12 @@
     }
    ],
    "source": [
-    "full_docs = full_doc_retriever.get_relevant_documents(\"I am whatever you say I am and if I wasn't why would you say I am\", k = 3)\n",
-    "print(full_docs[0].page_content) # This is the Parent Document returned after matching the smaller chunks internally"
+    "full_docs = full_doc_retriever.get_relevant_documents(\n",
+    "    \"I am whatever you say I am and if I wasn't why would you say I am\", k=3\n",
+    ")\n",
+    "print(\n",
+    "    full_docs[0].page_content\n",
+    ")  # This is the Parent Document returned after matching the smaller chunks internally"
    ]
   },
   {
@@ -866,20 +899,33 @@
    "outputs": [],
    "source": [
     "if \"big_chunk_table\" in my_db.table_names():\n",
-    "  big_chunk_table = my_db.open_table(\"big_chunk_table\")\n",
+    "    big_chunk_table = my_db.open_table(\"big_chunk_table\")\n",
     "else:\n",
-    "  big_chunk_table = my_db.create_table(\"big_chunk_table\", data=[{\"vector\": [-999]*384, \"text\": \"\", \"doc_id\": \"-1\",}], mode=\"overwrite\")\n",
+    "    big_chunk_table = my_db.create_table(\n",
+    "        \"big_chunk_table\",\n",
+    "        data=[\n",
+    "            {\n",
+    "                \"vector\": [-999] * 384,\n",
+    "                \"text\": \"\",\n",
+    "                \"doc_id\": \"-1\",\n",
+    "            }\n",
+    "        ],\n",
+    "        mode=\"overwrite\",\n",
+    "    )\n",
     "\n",
     "big_chunk_table.delete('doc_id = \"-1\"')\n",
     "\n",
     "vectorstore = LanceDB(big_chunk_table, bge_embeddings)\n",
     "store = InMemoryStore()\n",
     "\n",
-    "big_chunk_retriever = ParentDocumentRetriever(vectorstore=vectorstore, docstore=store,\n",
-    "                                              child_splitter = small_chunk_splitter,\n",
-    "                                              parent_splitter = big_chunk_splitter) # See one more line addition which retrieves the larger chunk instead of Parent Document\n",
+    "big_chunk_retriever = ParentDocumentRetriever(\n",
+    "    vectorstore=vectorstore,\n",
+    "    docstore=store,\n",
+    "    child_splitter=small_chunk_splitter,\n",
+    "    parent_splitter=big_chunk_splitter,\n",
+    ")  # See one more line addition which retrieves the larger chunk instead of Parent Document\n",
     "\n",
-    "big_chunk_retriever.add_documents(docs, ids=None) # Add all the documents\n"
+    "big_chunk_retriever.add_documents(docs, ids=None)  # Add all the documents"
    ]
   },
   {
@@ -949,8 +995,12 @@
     }
    ],
    "source": [
-    "big_chunks_docs = big_chunk_retriever.get_relevant_documents(\"I am whatever you say I am and if I wasn't why would you say I am\", k = 3)\n",
-    "print(big_chunks_docs[0].page_content) # This is the BIG chunks (in place of Parent Document) returned after matching the smaller chunks internally"
+    "big_chunks_docs = big_chunk_retriever.get_relevant_documents(\n",
+    "    \"I am whatever you say I am and if I wasn't why would you say I am\", k=3\n",
+    ")\n",
+    "print(\n",
+    "    big_chunks_docs[0].page_content\n",
+    ")  # This is the BIG chunks (in place of Parent Document) returned after matching the smaller chunks internally"
    ]
   },
   {
@@ -970,9 +1020,11 @@
    },
    "outputs": [],
    "source": [
-    "qa = RetrievalQA.from_chain_type(llm=OpenAI(model_name=\"gpt-3.4-turbo\"),\n",
-    "                                 chain_type=\"stuff\",\n",
-    "                                 retriever=big_chunk_retriever)"
+    "qa = RetrievalQA.from_chain_type(\n",
+    "    llm=OpenAI(model_name=\"gpt-3.4-turbo\"),\n",
+    "    chain_type=\"stuff\",\n",
+    "    retriever=big_chunk_retriever,\n",
+    ")"
    ]
   },
   {
@@ -983,7 +1035,9 @@
    },
    "outputs": [],
    "source": [
-    "query = \"I am whatever you say I am and if I wasn't why would you say I am? So who is Em?\"\n",
+    "query = (\n",
+    "    \"I am whatever you say I am and if I wasn't why would you say I am? So who is Em?\"\n",
+    ")\n",
     "qa.run(query)"
    ]
   }
