--- a/examples/search-within-images-with-sam-and-clip/main.ipynb
+++ b/examples/search-within-images-with-sam-and-clip/main.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "#install all the neccessary libraries\n",
+    "# install all the neccessary libraries\n",
     "!pip install git+https://github.com/facebookresearch/segment-anything.git\n",
     "!pip install open_clip_torch\n",
     "!pip install lancedb"
@@ -193,11 +193,11 @@
    },
    "outputs": [],
    "source": [
-    "#load the weights for SAM, using ViT-H model\n",
-    "url = 'https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth'\n",
+    "# load the weights for SAM, using ViT-H model\n",
+    "url = \"https://dl.fbaipublicfiles.com/segment_anything/sam_vit_h_4b8939.pth\"\n",
     "response = requests.get(url)\n",
     "\n",
-    "with open('sam_vit_h_4b8939.pth', 'wb') as f:\n",
+    "with open(\"sam_vit_h_4b8939.pth\", \"wb\") as f:\n",
     "    f.write(response.content)"
    ]
   },
@@ -216,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "#initialize the database\n",
+    "# initialize the database\n",
     "uri = \"data/sample-lancedb\"\n",
     "db = lancedb.connect(uri)"
    ]
@@ -324,9 +324,11 @@
     }
    ],
    "source": [
-    "#load the CLIP model, ViT-B-32\n",
-    "model, _, preprocess = open_clip.create_model_and_transforms('ViT-B-32', pretrained='laion2b_s34b_b79k')\n",
-    "tokenizer = open_clip.get_tokenizer('ViT-B-32')\n",
+    "# load the CLIP model, ViT-B-32\n",
+    "model, _, preprocess = open_clip.create_model_and_transforms(\n",
+    "    \"ViT-B-32\", pretrained=\"laion2b_s34b_b79k\"\n",
+    ")\n",
+    "tokenizer = open_clip.get_tokenizer(\"ViT-B-32\")\n",
     "model.eval()"
    ]
   },
@@ -345,14 +347,14 @@
    },
    "outputs": [],
    "source": [
-    "#function to get the image embeddings\n",
+    "# function to get the image embeddings\n",
     "def get_image_embeddings_from_path(file_path):\n",
     "    # Load the image from the file path\n",
     "    image = preprocess(Image.open(file_path)).unsqueeze(0)\n",
     "    # Encode the image\n",
     "    with torch.no_grad():\n",
     "        embeddings = model.encode_image(image)\n",
-    "    embeddings = embeddings.squeeze() # to squeeze the embeddings into 1-dimension\n",
+    "    embeddings = embeddings.squeeze()  # to squeeze the embeddings into 1-dimension\n",
     "    return embeddings.detach().numpy()"
    ]
   },
@@ -364,12 +366,12 @@
    },
    "outputs": [],
    "source": [
-    "#utility function to download image, given the link\n",
+    "# utility function to download image, given the link\n",
     "def download_image(url):\n",
     "    response = requests.get(url)\n",
     "    img_dir = uuid.uuid4().hex[:6]\n",
     "    os.makedirs(img_dir)\n",
-    "    file_path = img_dir + '/' + 'index' + \".jpg\"\n",
+    "    file_path = img_dir + \"/\" + \"index\" + \".jpg\"\n",
     "    with open(file_path, \"wb\") as f:\n",
     "        f.write(response.content)\n",
     "    return img_dir"
@@ -383,11 +385,13 @@
    },
    "outputs": [],
    "source": [
-    "#load SAM\n",
+    "# load SAM\n",
     "from segment_anything import SamAutomaticMaskGenerator, sam_model_registry\n",
+    "\n",
     "sam = sam_model_registry[\"vit_h\"](checkpoint=\"sam_vit_h_4b8939.pth\")\n",
     "\n",
-    "#extract the segmentation masks from the image\n",
+    "\n",
+    "# extract the segmentation masks from the image\n",
     "def get_image_segmentations(img_path):\n",
     "    input_img = cv2.imread(img_path)\n",
     "    input_img = cv2.cvtColor(input_img, cv2.COLOR_BGR2RGB)\n",
@@ -411,14 +415,14 @@
    },
    "outputs": [],
    "source": [
-    "#crop the into segmentation masks, and create new images\n",
+    "# crop the into segmentation masks, and create new images\n",
     "def crop_image_by_seg(image, segmentation):\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    Input:\n",
     "        image: np.array,\n",
     "        segmentation : np.array\n",
     "\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    binary_mask = segmentation.astype(int)\n",
     "\n",
     "    # Create a white canvas of the same size as the image\n",
@@ -437,10 +441,10 @@
    },
    "outputs": [],
    "source": [
-    "#utility function to crop the image using bounding boxes\n",
+    "# utility function to crop the image using bounding boxes\n",
     "def crop_image_with_bbox(image, bbox):\n",
-    "    X,Y,W,H = bbox\n",
-    "    cropped_image = image[Y:Y+H, X:X+W]\n",
+    "    X, Y, W, H = bbox\n",
+    "    cropped_image = image[Y : Y + H, X : X + W]\n",
     "\n",
     "    return cropped_image"
    ]
@@ -460,27 +464,42 @@
    },
    "outputs": [],
    "source": [
-    "#composite call to the functions to create the segmentation mask, crop it, embed it and finally index it into LanceDB\n",
+    "# composite call to the functions to create the segmentation mask, crop it, embed it and finally index it into LanceDB\n",
     "def index_images_to_lancedb(img_uuid):\n",
-    "    img_path = img_uuid + '/index.jpg'\n",
+    "    img_path = img_uuid + \"/index.jpg\"\n",
     "    source_img = cv2.imread(img_path)\n",
-    "    segmentations = get_image_segmentations(img_path)  #get the segmentations\n",
+    "    segmentations = get_image_segmentations(img_path)  # get the segmentations\n",
     "\n",
     "    for index, seg in enumerate(segmentations):\n",
-    "        cropped_img = crop_image_with_bbox(crop_image_by_seg(source_img, seg['segmentation']), seg['bbox']) #crop the image by bbox\n",
-    "        c_img_path = img_uuid + '/{}.jpg'.format(index)\n",
+    "        cropped_img = crop_image_with_bbox(\n",
+    "            crop_image_by_seg(source_img, seg[\"segmentation\"]), seg[\"bbox\"]\n",
+    "        )  # crop the image by bbox\n",
+    "        c_img_path = img_uuid + \"/{}.jpg\".format(index)\n",
     "        cv2.imwrite(c_img_path, cropped_img)\n",
-    "        embeddings = get_image_embeddings_from_path(c_img_path) #embed the image using CLIP\n",
-    "        seg['embeddings'] = embeddings\n",
-    "        seg['img_path'] = c_img_path\n",
-    "        seg['seg_shape'] = seg['segmentation'].shape\n",
-    "        seg['segmentation'] = seg['segmentation'].reshape(-1)\n",
-    "\n",
+    "        embeddings = get_image_embeddings_from_path(\n",
+    "            c_img_path\n",
+    "        )  # embed the image using CLIP\n",
+    "        seg[\"embeddings\"] = embeddings\n",
+    "        seg[\"img_path\"] = c_img_path\n",
+    "        seg[\"seg_shape\"] = seg[\"segmentation\"].shape\n",
+    "        seg[\"segmentation\"] = seg[\"segmentation\"].reshape(-1)\n",
     "\n",
     "    seg_df = pd.DataFrame(segmentations)\n",
-    "    seg_df = seg_df[['img_path', 'embeddings', 'bbox', 'stability_score', 'predicted_iou', 'segmentation','seg_shape']]\n",
+    "    seg_df = seg_df[\n",
+    "        [\n",
+    "            \"img_path\",\n",
+    "            \"embeddings\",\n",
+    "            \"bbox\",\n",
+    "            \"stability_score\",\n",
+    "            \"predicted_iou\",\n",
+    "            \"segmentation\",\n",
+    "            \"seg_shape\",\n",
+    "        ]\n",
+    "    ]\n",
     "    seg_df = seg_df.rename(columns={\"embeddings\": \"vector\"})\n",
-    "    tbl = db.create_table(\"table_{}\".format(img_uuid), data=seg_df) #index the images into table\n",
+    "    tbl = db.create_table(\n",
+    "        \"table_{}\".format(img_uuid), data=seg_df\n",
+    "    )  # index the images into table\n",
     "    return tbl"
    ]
   },
@@ -492,7 +511,7 @@
    },
    "outputs": [],
    "source": [
-    "#flatten the list\n",
+    "# flatten the list\n",
     "def flatten_list(lst):\n",
     "    return [item for sublist in lst for item in sublist]"
    ]
@@ -512,7 +531,7 @@
    },
    "outputs": [],
    "source": [
-    "#find the image using natural language query\n",
+    "# find the image using natural language query\n",
     "def search_image_with_user_query(vector_table, img_id, user_query):\n",
     "\n",
     "    text = tokenizer(user_query)\n",
@@ -521,23 +540,27 @@
     "    k_embedding_list = flatten_list(k_embedding)\n",
     "\n",
     "    target = vector_table.search(k_embedding_list).limit(1).to_pandas()\n",
-    "    segmentation_mask = cv2.convertScaleAbs(target.iloc[0]['segmentation'].reshape(target.iloc[0]['seg_shape']).astype(int))\n",
+    "    segmentation_mask = cv2.convertScaleAbs(\n",
+    "        target.iloc[0][\"segmentation\"].reshape(target.iloc[0][\"seg_shape\"]).astype(int)\n",
+    "    )\n",
     "\n",
     "    # Dilate the segmentation mask to expand the area\n",
-    "    dilated_mask = cv2.dilate(segmentation_mask, np.ones((10, 10), np.uint8), iterations=1)\n",
+    "    dilated_mask = cv2.dilate(\n",
+    "        segmentation_mask, np.ones((10, 10), np.uint8), iterations=1\n",
+    "    )\n",
     "\n",
     "    # Create a mask of the surroundings by subtracting the original segmentation mask\n",
     "    surroundings_mask = dilated_mask - segmentation_mask\n",
     "\n",
     "    # Create a highlighted version of the original image\n",
-    "    path = '{}/index.jpg'.format(img_id)\n",
+    "    path = \"{}/index.jpg\".format(img_id)\n",
     "    highlighted_image = cv2.imread(path)\n",
     "    highlighted_image[surroundings_mask > 0] = [253, 218, 13]\n",
     "\n",
-    "    cv2.imwrite('{}/processed.jpg'.format(img_id), highlighted_image)\n",
+    "    cv2.imwrite(\"{}/processed.jpg\".format(img_id), highlighted_image)\n",
     "\n",
     "    # Display the image\n",
-    "    display(Image(filename='{}/processed.jpg'.format(img_id)))\n"
+    "    display(Image(filename=\"{}/processed.jpg\".format(img_id)))"
    ]
   },
   {
@@ -548,7 +571,7 @@
    },
    "outputs": [],
    "source": [
-    "url = 'https://w0.peakpx.com/wallpaper/600/440/HD-wallpaper-john-wick-with-mustang.jpg'\n",
+    "url = \"https://w0.peakpx.com/wallpaper/600/440/HD-wallpaper-john-wick-with-mustang.jpg\"\n",
     "img_uuid = download_image(url)"
    ]
   },
@@ -625,7 +648,7 @@
     }
    ],
    "source": [
-    "search_image_with_user_query(tbl,img_uuid, 'a dog')"
+    "search_image_with_user_query(tbl, img_uuid, \"a dog\")"
    ]
   },
   {
@@ -645,8 +668,8 @@
    },
    "outputs": [],
    "source": [
-    "#load the image\n",
-    "img_path = '/content/079698/index.jpg'\n",
+    "# load the image\n",
+    "img_path = \"/content/079698/index.jpg\"\n",
     "ans = get_image_segmentations(img_path)"
    ]
   },
@@ -1531,7 +1554,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "#display function\n",
+    "\n",
+    "# display function\n",
     "def display_segmentations(segmentations):\n",
     "    for i, seg_info in enumerate(segmentations):\n",
     "        print(f\"Segmentation {i+1} Info:\")\n",
@@ -1545,23 +1569,30 @@
     "        print(\"\")\n",
     "\n",
     "        # Create a binary image from the segmentation mask\n",
-    "        binary_mask = np.array(seg_info['segmentation'], dtype=np.uint8) * 255\n",
+    "        binary_mask = np.array(seg_info[\"segmentation\"], dtype=np.uint8) * 255\n",
     "\n",
     "        # Display the image and overlay the segmentation mask\n",
     "        plt.figure(figsize=(6, 6))\n",
-    "        plt.imshow(binary_mask, cmap='gray')\n",
+    "        plt.imshow(binary_mask, cmap=\"gray\")\n",
     "        plt.title(f\"Segmentation {i+1}\")\n",
-    "        plt.axis('off')\n",
+    "        plt.axis(\"off\")\n",
     "\n",
     "        # Draw bounding box\n",
-    "        rect = plt.Rectangle((seg_info['bbox'][0], seg_info['bbox'][1]), seg_info['bbox'][2], seg_info['bbox'][3],\n",
-    "                             linewidth=2, edgecolor='r', facecolor='none')\n",
+    "        rect = plt.Rectangle(\n",
+    "            (seg_info[\"bbox\"][0], seg_info[\"bbox\"][1]),\n",
+    "            seg_info[\"bbox\"][2],\n",
+    "            seg_info[\"bbox\"][3],\n",
+    "            linewidth=2,\n",
+    "            edgecolor=\"r\",\n",
+    "            facecolor=\"none\",\n",
+    "        )\n",
     "        plt.gca().add_patch(rect)\n",
     "\n",
     "        plt.show()\n",
     "\n",
+    "\n",
     "# Call the function with your segmentation results\n",
-    "display_segmentations(ans)\n"
+    "display_segmentations(ans)"
    ]
   },
   {
