--- a/examples/RAG_re_ranking/main.ipynb
+++ b/examples/RAG_re_ranking/main.ipynb
@@ -394,7 +394,10 @@
     }
    ],
    "source": [
-    "from FlagEmbedding import LLMEmbedder, FlagReranker # Al document present here https://github.com/FlagOpen/FlagEmbedding/tree/master\n",
+    "from FlagEmbedding import (\n",
+    "    LLMEmbedder,\n",
+    "    FlagReranker,\n",
+    ")  # Al document present here https://github.com/FlagOpen/FlagEmbedding/tree/master\n",
     "import os\n",
     "import lancedb\n",
     "import re\n",
@@ -410,10 +413,14 @@
     "from lancedb.embeddings import with_embeddings\n",
     "\n",
     "\n",
-    "task = \"qa\" # Encode for a specific task (qa, icl, chat, lrlm, tool, convsearch)\n",
-    "embed_model = LLMEmbedder('BAAI/llm-embedder', use_fp16=False) # Load model (automatically use GPUs)\n",
+    "task = \"qa\"  # Encode for a specific task (qa, icl, chat, lrlm, tool, convsearch)\n",
+    "embed_model = LLMEmbedder(\n",
+    "    \"BAAI/llm-embedder\", use_fp16=False\n",
+    ")  # Load model (automatically use GPUs)\n",
     "\n",
-    "reranker_model = FlagReranker('BAAI/bge-reranker-base', use_fp16=True) # use_fp16 speeds up computation with a slight performance degradation\n",
+    "reranker_model = FlagReranker(\n",
+    "    \"BAAI/bge-reranker-base\", use_fp16=True\n",
+    ")  # use_fp16 speeds up computation with a slight performance degradation\n",
     "\n",
     "# For basic splitting\n",
     "# basic_text_splitter = RecursiveCharacterTextSplitter(chunk_size=512, chunk_overlap=64,) # 512 is the default Embedding model max_len\n",
@@ -881,7 +888,12 @@
    ],
    "source": [
     "queries = load_dataset(\"BeIR/scidocs\", \"queries\")[\"queries\"].to_pandas()\n",
-    "docs = load_dataset('BeIR/scidocs', 'corpus')[\"corpus\"].to_pandas().dropna(subset = \"text\").sample(10000) # just random samples for faster embed demo\n",
+    "docs = (\n",
+    "    load_dataset(\"BeIR/scidocs\", \"corpus\")[\"corpus\"]\n",
+    "    .to_pandas()\n",
+    "    .dropna(subset=\"text\")\n",
+    "    .sample(10000)\n",
+    ")  # just random samples for faster embed demo\n",
     "docs.sample(3)"
    ]
   },
@@ -939,16 +951,18 @@
     "    \"\"\"\n",
     "    Function to embed the whole text data\n",
     "    \"\"\"\n",
-    "    return embed_model.encode_keys(batch, task=task) # Encode data or 'keys'\n",
+    "    return embed_model.encode_keys(batch, task=task)  # Encode data or 'keys'\n",
     "\n",
     "\n",
-    "db = lancedb.connect(\"./db\") # Connect Local DB\n",
+    "db = lancedb.connect(\"./db\")  # Connect Local DB\n",
     "if \"doc_embed\" in db.table_names():\n",
-    "  table = db.open_table(\"doc_embed\") # Open Table\n",
+    "    table = db.open_table(\"doc_embed\")  # Open Table\n",
     "else:\n",
-    "  # Use the train text chunk data to save embed in the DB\n",
-    "  data = with_embeddings(embed_documents, docs, column = 'text',show_progress = True, batch_size = 128)\n",
-    "  table = db.create_table(\"doc_embed\", data=data) # create Table"
+    "    # Use the train text chunk data to save embed in the DB\n",
+    "    data = with_embeddings(\n",
+    "        embed_documents, docs, column=\"text\", show_progress=True, batch_size=128\n",
+    "    )\n",
+    "    table = db.create_table(\"doc_embed\", data=data)  # create Table"
    ]
   },
   {
@@ -1358,20 +1372,27 @@
     }
    ],
    "source": [
-    "def search(query, top_k = 10):\n",
-    "  \"\"\"\n",
-    "  Search a query from the table\n",
-    "  \"\"\"\n",
-    "  query_vector = embed_model.encode_queries(query, task=task) # Encode the QUERY (it is done differently than the 'key')\n",
-    "  search_results = table.search(query_vector).limit(top_k)\n",
-    "  return search_results\n",
+    "def search(query, top_k=10):\n",
+    "    \"\"\"\n",
+    "    Search a query from the table\n",
+    "    \"\"\"\n",
+    "    query_vector = embed_model.encode_queries(\n",
+    "        query, task=task\n",
+    "    )  # Encode the QUERY (it is done differently than the 'key')\n",
+    "    search_results = table.search(query_vector).limit(top_k)\n",
+    "    return search_results\n",
     "\n",
     "\n",
     "query = random.choice(queries[\"text\"])\n",
     "print(\"QUERY:-> \", query)\n",
     "\n",
     "# get top_k search results\n",
-    "search_results = search(\"what is mitochondria?\", top_k = 10).to_pandas().dropna(subset = \"text\").reset_index(drop = True)\n",
+    "search_results = (\n",
+    "    search(\"what is mitochondria?\", top_k=10)\n",
+    "    .to_pandas()\n",
+    "    .dropna(subset=\"text\")\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
     "\n",
     "search_results"
    ]
@@ -1820,13 +1841,18 @@
    ],
    "source": [
     "def rerank(query, search_results):\n",
-    "  search_results[\"old_similarity_rank\"] = search_results.index+1 # Old ranks\n",
+    "    search_results[\"old_similarity_rank\"] = search_results.index + 1  # Old ranks\n",
     "\n",
-    "  torch.cuda.empty_cache()\n",
-    "  gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
+    "    gc.collect()\n",
     "\n",
-    "  search_results[\"new_scores\"] = reranker_model.compute_score([[query,chunk] for chunk in search_results[\"text\"]]) # Re compute ranks\n",
-    "  return search_results.sort_values(by = \"new_scores\", ascending = False).reset_index(drop = True)\n",
+    "    search_results[\"new_scores\"] = reranker_model.compute_score(\n",
+    "        [[query, chunk] for chunk in search_results[\"text\"]]\n",
+    "    )  # Re compute ranks\n",
+    "    return search_results.sort_values(by=\"new_scores\", ascending=False).reset_index(\n",
+    "        drop=True\n",
+    "    )\n",
+    "\n",
     "\n",
     "print(\"QUERY:-> \", query)\n",
     "\n",
