--- a/examples/prompttools-eval-prompts/main.ipynb
+++ b/examples/prompttools-eval-prompts/main.ipynb
@@ -61,24 +61,28 @@
     "\n",
     "# Configuring the environment variable OPENAI_API_KEY\n",
     "if \"OPENAI_API_KEY\" not in os.environ:\n",
-    "  # OR set the key here as a variable\n",
-    "  openai.api_key = \"...\"\n",
+    "    # OR set the key here as a variable\n",
+    "    openai.api_key = \"...\"\n",
     "\n",
     "\n",
     "DEFAULT = SentenceTransformer(\"paraphrase-MiniLM-L3-v2\")\n",
     "MIMNILM_L6 = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
     "\n",
+    "\n",
     "def default_embed_func(batch):\n",
     "    return [DEFAULT.encode(sentence) for sentence in batch]\n",
     "\n",
+    "\n",
     "def minilm_l6_embed_func(batch):\n",
     "    return [MIMNILM_L6.encode(sentence) for sentence in batch]\n",
-    "  \n",
+    "\n",
+    "\n",
     "def openai_ada2_embed_func(batch):\n",
     "    rs = openai.Embedding.create(input=batch, engine=\"text-embedding-ada-002\")\n",
     "    return [record[\"embedding\"] for record in rs[\"data\"]]\n",
     "\n",
-    "emb_fns = {\"minilm_l6\": minilm_l6_embed_func,  \"default\": default_embed_func }\n",
+    "\n",
+    "emb_fns = {\"minilm_l6\": minilm_l6_embed_func, \"default\": default_embed_func}\n",
     "# Try with openai\n",
     "# emb_fns = {\"openai-ada-002\": openai_ada2_embed_func, \"minilm_l6\": minilm_l6_embed_func,  \"default\": default_embed_func }"
    ]
@@ -112,18 +116,34 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "use_existing_table = False  # Specify that we want to create a collection during the experiment\n",
+    "\n",
+    "use_existing_table = (\n",
+    "    False  # Specify that we want to create a collection during the experiment\n",
+    ")\n",
     "\n",
     "# Documents that will be added into the database. LanceDB also accepts other dataset formats like pydict, pyarrow, Pydantic etc.\n",
     "# Learn more here - https://lancedb.github.io/lancedb/guides/tables/\n",
     "\n",
-    "data = pd.DataFrame({\n",
-    "    \"text\": [\"This is a document\", \"This is another document\", \"This is the document.\"],\n",
-    "    \"metadatas\": [{\"source\": \"my_source\"}, {\"source\": \"my_source\"}, {\"source\": \"my_source\"}],\n",
-    "    \"ids\": [\"id1\", \"id2\", \"id3\"],\n",
-    "})\n",
+    "data = pd.DataFrame(\n",
+    "    {\n",
+    "        \"text\": [\n",
+    "            \"This is a document\",\n",
+    "            \"This is another document\",\n",
+    "            \"This is the document.\",\n",
+    "        ],\n",
+    "        \"metadatas\": [\n",
+    "            {\"source\": \"my_source\"},\n",
+    "            {\"source\": \"my_source\"},\n",
+    "            {\"source\": \"my_source\"},\n",
+    "        ],\n",
+    "        \"ids\": [\"id1\", \"id2\", \"id3\"],\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "query_args = {\"text\": [\"This is a query document\", \"This is a another query document\"], \"metric\": [\"cosine\", \"l2\"]}\n",
+    "query_args = {\n",
+    "    \"text\": [\"This is a query document\", \"This is a another query document\"],\n",
+    "    \"metric\": [\"cosine\", \"l2\"],\n",
+    "}\n",
     "\n",
     "\n",
     "# Set up the experiment\n",
@@ -133,7 +153,7 @@
     "    query_args=query_args,\n",
     ")\n",
     "\n",
-    "# [Optional] Advanced query args \n",
+    "# [Optional] Advanced query args\n",
     "# Our test queries, along with optional query args. LanceDB query accepts a few args to customize your search:\n",
     "# metrics: \"l2\", \"cosine\", or \"dot\" (cosine by default)\n",
     "# filter: SQL where clause to filter the vector search results before applying the limit. (None by default)\n",
@@ -467,13 +487,17 @@
     "}\n",
     "\n",
     "\n",
-    "def measure_correlation(row: \"pandas.core.series.Series\", ranking_column_name: str = \"top doc ids\") -> float:\n",
+    "def measure_correlation(\n",
+    "    row: \"pandas.core.series.Series\", ranking_column_name: str = \"top doc ids\"\n",
+    ") -> float:\n",
     "    r\"\"\"\n",
     "    A simple test that compares the expected ranking for a given query with the actual ranking produced\n",
     "    by the embedding function being tested.\n",
     "    \"\"\"\n",
     "    input_query = row[\"text\"]\n",
-    "    correlation, _ = stats.spearmanr(row[ranking_column_name], EXPECTED_RANKING[input_query])\n",
+    "    correlation, _ = stats.spearmanr(\n",
+    "        row[ranking_column_name], EXPECTED_RANKING[input_query]\n",
+    "    )\n",
     "    return correlation"
    ]
   },
